--- a/views/base/layout.jade
+++ b/views/base/layout.jade
@@ -1,5 +1,6 @@
 html
   head
+    title #{contenido.titulo}
     meta(charset='utf-8')
     // Para dispositivos móviles
     link(rel='icon', href='/images/siteicon.png')
