--- a/views/base/layout_sin_cabecera.jade
+++ b/views/base/layout_sin_cabecera.jade
@@ -1,5 +1,6 @@
 html
   head
+    title #{contenido.titulo}
     meta(charset='utf-8')
     // Para dispositivos móviles
     meta(name='viewport', content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no')
