--- a/views/denuncias/lista.jade
+++ b/views/denuncias/lista.jade
@@ -65,14 +65,23 @@ block content
 			.row#denuncias
 block link
 	link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.1/css/bootstrap-datepicker.css")
+	link(rel="stylesheet" href="/javascripts/plugins/bootstrap-tagsinput/dist/bootstrap-tagsinput.css")
 block script
 	script(src='/javascripts/plugins/ol3/build/ol.js')
 	script(src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.1/js/bootstrap-datepicker.js")
 	script(src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.1/locales/bootstrap-datepicker.es.min.js")
+	script(src="http://twitter.github.io/typeahead.js/releases/latest/typeahead.jquery.js")
+	script(src="http://twitter.github.io/typeahead.js/releases/latest/bloodhound.js")
+	script(src="/javascripts/plugins/bootstrap-tagsinput/dist/bootstrap-tagsinput.js")
 	script.
+		window.document.title += ' - Listado de denuncias';
 		// al INICIAR
+
+		var q_dialog;
+
 		var denuncias = JSON.parse('!{JSON.stringify(denuncias)}');
 		var tipo, coords, extension;
+
 		denuncias.forEach(function(d){
 			d.tipo = d.geometria.type;
 			d.coordenadas = d.geometria.coordinates;
@@ -84,48 +93,233 @@ block script
 		});
 	
 		$('#buscar').click(function(event){
-			var html = '<div class="row">' +
-			'<div class="col-lg-6"><div class="input-group"><span class="input-group-addon">Título</span>' +
-			'<input class="form-control btn-default" id="titulo" type="text" name="titulo" placeholder="buscar por título..."></input></div></div>' + 
-			'<div class="col-lg-6"><div class="input-group"><span class="input-group-addon"><i class="fa fa-tags"></i></span>' +
-			'<input class="form-control btn-default" id="tags" type="text" name="tags" placeholder="contiene el tag..."></input></div></div>' +
-			'<div class="col-lg-6" style="margin-top: 20px;" ><div class="input-group"><span class="input-group-addon"><i class="fa fa-user"></i></span>' +
-			'<input class="form-control btn-default" id="username" type="text" name="username" placeholder="denunciado por..."></input></div></div>' +
-			'<div class="col-lg-6"></div>' +
-			'<div class="col-lg-12"><h4> Denuncias cercanas a...</h4><p> Introduce el centro y el radio de búsqueda. Para saber las coordenadas del centro dirígete a <a href="http://epsg.io/4258/map" target="_blank">http://epsg.io/4258/map</a>. El separador decimal es el punto "." o la coma "," </p></div>' +
-			'<div class="col-lg-4" style="margin-top: 20px;" ><div class="input-group"><span class="input-group-addon"><i class="fa fa-location-arrow"></i></span>' +
-			'<input class="form-control btn-default" id="lat_centro" type="text" name="lat" placeholder="Latitud del centro del buffer"></input></div></div>' +
-			'<div class="col-lg-4" style="margin-top: 20px;" ><div class="input-group"><span class="input-group-addon"><i class="fa fa-location-arrow"></i></span>' +
-			'<input class="form-control btn-default" id="lon_centro" type="text" name="lon" placeholder="Longitud del centro del buffer"></input></div></div>' +
-			'<div class="col-lg-4" style="margin-top: 20px;" ><div class="input-group"><span class="input-group-addon"><i class="fa fa-location-arrow"></i></span>' +
-			'<input class="form-control btn-default" id="radio" type="text" name="username" placeholder="Radio del buffer"></input></div></div>' +
-			'<div class="col-lg-12"><h4> Buscar por fecha</h4><p>Buscar denuncias por fecha</p></div>' +
-			'<div class="col-lg-6"><div class="input-group"><span class="input-group-addon"><i class="fa fa-calendar"></i></span>' +
-			'<input  autocomplete="off" class="form-control btn-default datepicker" id="fecha_desde" type="text" name="titulo" placeholder="Desde dd/mm/aaaa"></input></div></div>' + 
-			'<div class="col-lg-6"><div class="input-group"><span class="input-group-addon"><i class="fa fa-calendar"></i></span>' +
-			'<input  autocomplete="off" class="form-control btn-default datepicker" id="fecha_hasta" type="text" name="tags" placeholder="Hasta dd/mm/aaaa"></input></div></div>' +
-			'</div>';
-			BootstrapDialog.show({
+			var bbox_form = '<div id="toggle_bbox" class="container-fluid" style="padding : 0px">' +
+				'<div class="col-lg-6" style="margin-top : 10px;">' +
+					'<div class="input-group">' +
+						'<span class="input-group-addon">φmin</span>' +
+						'<input class="form-control btn-default" id="lat_min" type="text" name="lat" placeholder="Latitud mínima (φ)"></input>' +
+					'</div>' + 
+				'</div>' +
+				'<div class="col-lg-6" style="margin-top : 10px;">' +
+					'<div class="input-group">' + 
+						'<span class="input-group-addon">λmin</i></span>' +
+						'<input class="form-control btn-default" id="lon_min" type="text" name="lon" placeholder="Longitud mínima (λ)"></input>' + 
+					'</div>' + 
+				'</div>' +
+				'<div class="col-lg-6" style="margin-top : 10px;">' +
+					'<div class="input-group">' +
+						'<span class="input-group-addon">φmax</span>' +
+						'<input class="form-control btn-default" id="lat_max" type="text" name="lat" placeholder="Latitud máxima (φ)"></input>' +
+					'</div>' + 
+				'</div>' +
+				'<div class="col-lg-6" style="margin-top : 10px;">' +
+					'<div class="input-group">' + 
+						'<span class="input-group-addon">λmax</i></span>' +
+						'<input class="form-control btn-default" id="lon_max" type="text" name="lon" placeholder="Longitud máxima (λ)"></input>' + 
+					'</div>' + 
+				'</div>' +
+		    '</div>',
+		    centro_buffer = '<div id="toggle_radio" class="container-fluid" style="padding : 0px">' + 
+		    '<div class="col-lg-4" style="margin-top : 10px;">' +
+					'<div class="input-group">' +
+						'<span class="input-group-addon">φ</span>' +
+						'<input class="form-control btn-default" id="lat_centro" type="text" name="lat" placeholder="Latitud del centro del buffer (φ)"></input>' +
+					'</div>' + 
+				'</div>' +
+				'<div class="col-lg-4" style="margin-top : 10px;">' +
+					'<div class="input-group">' + 
+						'<span class="input-group-addon">λ</i></span>' +
+						'<input class="form-control btn-default" id="lon_centro" type="text" name="lon" placeholder="Longitud del centro del buffer (λ)"></input>' + 
+					'</div>' + 
+				'</div>' +
+				'<div class="col-lg-4" style="margin-top: 10px;">' + 
+					'<div class="input-group">' + 
+						'<span class="input-group-addon"><i class="glyphicon glyphicon-record"></i></span>' +
+						'<input class="form-control btn-default" id="radio" type="text" name="username" placeholder="Radio del buffer"></input>' + 
+					'</div>' + 
+				'</div>' +
+			'</div>',
+			html = '<div class="row">' +
+				'<div class="col-lg-12">' + 
+					'<h4>Datos Básicos</h4>' + 
+					'<p>Buscar por título, tags (separados por coma) y nombre de usuario</p>' + 
+				'</div>' +
+				'<div class="col-lg-6">' +
+					'<div class="input-group" style="margin-top: 10px;">' +
+						'<span class="input-group-addon"><i class="fa fa-bookmark-o"></i></span>' +
+						'<input class="form-control btn-default" id="titulo" type="text" name="titulo" placeholder="buscar por título..."></input>' +
+					'</div>' +
+				'</div>' + 
+				'<div class="col-lg-6" style="margin-top: 10px;">' +
+					'<div class="input-group">' +
+						'<span class="input-group-addon"><i class="fa fa-user"></i></span>' +
+						'<input class="form-control btn-default" id="username" type="text" name="username" placeholder="denunciado por..."></input>' +
+					'</div>' + 
+				'</div>' +
+				'<div class="col-lg-12" style="margin-top: 10px;">' +
+					'<div class="input-group">' +
+						'<span class="input-group-addon"><i class="fa fa-tags"></i></span>' +
+						'<input id="tags" type="text" name="tags" placeholder="ej : suciedad, olores,..." class="col-lg-12"/>' +
+					'</div>' +
+				'</div>' +
+				'<div class="col-lg-6"></div>' +
+				'<div class="col-lg-12" style="margin-bottom : 10px">' + 
+					'<h4>Denuncias cercanas a...</h4>' +
+					'<p>Introduce el centro y el radio de búsqueda. Para obtener las coordenadas del centro dirígete a <a href="http://epsg.io/4258/map" target="_blank">http://epsg.io/4258/map</a>. El separador decimal es el punto ".".' + 
+					' O utiliza las funcionalidades de selección en el mapa</p>' +
+					'<div id="seleccionar_radio" class="col-lg-6 text-center btn-success" style="padding : 5px; border: none;"><a style="color : #fff" href="javascript:void(0)">RADIO</a></div>' +
+					'<div id="seleccionar_bbox" style="padding : 5px; border: none;" class="col-lg-6 text-center btn-warning"><a style="color : #fff" href="javascript:void(0)">BBOX</a></div>' + 
+				'</div>' +
+				centro_buffer +
+				bbox_form +
+				'<div class="col-lg-12">' + 
+					'<h4>Fecha</h4>' + 
+					'<p>Buscar denuncias en un intervalo de tiempo determinado</p>' + 
+				'</div>' +
+				'<div class="col-lg-6" style="margin-top: 10px;">' + 
+					'<div class="input-group">' + 
+						'<span class="input-group-addon"><i class="fa fa-calendar"></i></span>' +
+						'<input  autocomplete="off" class="form-control btn-default datepicker" id="fecha_desde" type="text" name="titulo" placeholder="Desde dd/mm/aaaa"></input>' +
+					'</div>' +
+				'</div>' + 
+				'<div class="col-lg-6" style="margin-top: 10px;">' + 
+					'<div class="input-group">' + 
+						'<span class="input-group-addon"><i class="fa fa-calendar"></i></span>' +
+						'<input  autocomplete="off" class="form-control btn-default datepicker" id="fecha_hasta" type="text" name="tags" placeholder="Hasta dd/mm/aaaa"></input>' +
+					'</div>' +
+				'</div>' +
+			'</div>', 
+			opened = 'radio';
+			q_dialog = new BootstrapDialog({
 				title: 'Buscar denuncias por...', 
 				message: html,
 				draggable: true,
+			    onshow : function(dialog){
+			        dialog.getModalHeader().replaceWith($('<div class="row" style="margin: 0px; padding-top: 5px; border-top-left-radius: 10px; border-top-right-radius: 10px; background: url(&#39;http://www.batlleiroig.com/wp-content/uploads/247_parc_central_st_cugat_8.jpg&#39;); background-size: cover; background-repeat: no-repeat;">' + 
+			          '<div class="col-xs-4" style="text-align: center; color: #fff; font-weight : bold;">' +
+			          '<i class="fa fa-search" style="font-size : 60px; color : #00bbff; text-shadow: 2px 2px #fff;"></i>' + 
+			            '<h4 style="padding : 2px; color : #00bbff; background : rgba(0,0,0,0.7); border-radius : 15px;"> Buscar por...</h4>' +
+			          '</div>' +
+			        '</div>'));
+			        dialog.getModalBody().parent().css('border-radius', '15px');
+			        dialog.getModalBody().css('padding-top', '10px');
+			    },
 				buttons: [{label: 'Cerrar', action: function(dialog){dialog.close();}}, 
-					{label: 'Buscar', action: function(dialog){
-						var data = {};
-						data.titulo = $(dialog.getModalBody()).find('#titulo').val();
-						data.tags = $(dialog.getModalBody()).find('#tags').val();
-						data.username = $(dialog.getModalBody()).find('#username').val(); 
-						data.buffer_centro = $(dialog.getModalBody()).find('#lon_centro').val() + ";;" + $(dialog.getModalBody()).find('#lat_centro').val() ; 
-						data.buffer_radio = $(dialog.getModalBody()).find('#radio').val(); 
-						data.fecha_desde = $(dialog.getModalBody()).find('#fecha_desde').val(); 
-						data.fecha_hasta = $(dialog.getModalBody()).find('#fecha_hasta').val(); 
-						num_denuncias_io.emit('query', data);
+					{id : 'buscar_btn', label: 'Buscar', action: function(dialog){
+		            	var data = {};
+		            	if(opened == 'radio'){
+							$(dialog.getModalBody()).find('#lat_min').val('');
+							$(dialog.getModalBody()).find('#lon_min').val('');
+							$(dialog.getModalBody()).find('#lat_max').val('');
+							$(dialog.getModalBody()).find('#lon_max').val('');
+		            	}
+		            	else {
+							$(dialog.getModalBody()).find('#lon_centro').val('');
+							$(dialog.getModalBody()).find('#lat_centro').val('');
+							$(dialog.getModalBody()).find('#radio').val('');
+		            	}
+
+		            	data.titulo = $(dialog.getModalBody()).find('#titulo').val();
+		            	data.tags = $(dialog.getModalBody()).find('#tags').tagsinput('items').join(',');
+		            	data.username = $(dialog.getModalBody()).find('#username').val(); 
+		            	data.lon = $(dialog.getModalBody()).find('#lon_centro').val();
+		            	data.lat = $(dialog.getModalBody()).find('#lat_centro').val(); 
+		            	data.buffer_radio = $(dialog.getModalBody()).find('#radio').val(); 
+		            	data.fecha_desde = $(dialog.getModalBody()).find('#fecha_desde').val(); 
+		            	data.fecha_hasta = $(dialog.getModalBody()).find('#fecha_hasta').val();
+
+		            	if($(dialog.getModalBody()).find('#lon_min').val().length == 0 && 
+		            	$(dialog.getModalBody()).find('#lat_min').val().length == 0 &&
+		            	$(dialog.getModalBody()).find('#lon_max').val().length == 0 && 
+		            	$(dialog.getModalBody()).find('#lat_max').val().length == 0)
+		            		data.bbox = undefined;
+		            	else
+		            		data.bbox = [$(dialog.getModalBody()).find('#lon_min').val(), $(dialog.getModalBody()).find('#lat_min').val(),
+		            		$(dialog.getModalBody()).find('#lon_max').val(), $(dialog.getModalBody()).find('#lat_max').val()].join();
+		            	console.log(data.bbox,$(dialog.getModalBody()).find('#lon_min').val(),
+		            		$(dialog.getModalBody()).find('#lon_max').val(),$(dialog.getModalBody()).find('#lat_min').val(),
+		            		$(dialog.getModalBody()).find('#lat_max').val());
+		            	num_denuncias_io.emit('query', data);
+
+		            	this.disable();
+		            	this.spin();
 				}}],
-				onshown: function(dialog){ $('.datepicker').datepicker({ format: 'dd/mm/yyyy', language: 'es', todayBtn: true, todayHighlight: true });}
+				onshown: function(dialog){
+
+					var tags_servidor = new Bloodhound({
+					  datumTokenizer: Bloodhound.tokenizers.obj.whitespace('tag'),
+					  queryTokenizer: Bloodhound.tokenizers.whitespace,
+					  prefetch: {
+					    url: '/app/denuncias/tags',
+					    filter: function(list) {
+					      return $.map(list, function(tag) {
+					        return { tag: tag }; });
+					    }
+					  }
+					});
+					tags_servidor.initialize();
+
+		  			$('#tags').tagsinput({
+						maxTags: 5,
+						maxChars: 15,
+						trimValue: true,
+						onTagExists: function(item, $tag) {
+							$tag.hide().fadeIn();
+							alert('Tag repetido');
+						},
+						typeaheadjs: {
+						    name: 'tags',
+						    displayKey: 'tag',
+						    valueKey: 'tag',
+						    source: tags_servidor.ttAdapter()
+						}
+					});
+
+			  		$('#seleccionar_radio').click(function(){
+			  			if(opened == 'radio') return;
+			  			opened = 'radio';
+			  			$(this).removeClass('btn-warning').addClass('btn-success');
+			  			$('#seleccionar_bbox').removeClass('btn-sucess').addClass('btn-warning');
+			  			$('#toggle_bbox').hide();
+			  			$('#toggle_radio').show();
+			  		});
+
+			  		$('#seleccionar_bbox').click(function(){
+			  			if(opened == 'bbox') return;
+			  			opened = 'bbox';
+			  			$(this).removeClass('btn-warning').addClass('btn-success');
+			  			$('#seleccionar_radio').removeClass('btn-sucess').addClass('btn-warning');
+			  			$('#toggle_radio').hide();
+			  			$('#toggle_bbox').show();
+			  		});
+			  		if(opened == 'radio')
+			  			$('#toggle_bbox').hide();
+
+				  	$('.datepicker').datepicker({ format: 'dd/mm/yyyy', language: 'es', todayBtn: true, todayHighlight: true });	
+				}
 			});
+			q_dialog.open();
 		});
-		
+
 		num_denuncias_io.on('api', function(data){
+
+			$(q_dialog.getModalBody()).find('#lat_min').val('');
+			$(q_dialog.getModalBody()).find('#lon_min').val('');
+			$(q_dialog.getModalBody()).find('#lat_max').val('');
+			$(q_dialog.getModalBody()).find('#lon_max').val('');
+			$(q_dialog.getModalBody()).find('#lon_centro').val('');
+			$(q_dialog.getModalBody()).find('#lat_centro').val('');
+			$(q_dialog.getModalBody()).find('#radio').val('');
+
+			$(q_dialog.getModalBody()).find('#titulo').val('');
+			$(q_dialog.getModalBody()).find('#tags').tagsinput('removeAll');
+			$(q_dialog.getModalBody()).find('#username').val('');  
+			$(q_dialog.getModalBody()).find('#fecha_desde').val(''); 
+			$(q_dialog.getModalBody()).find('#fecha_hasta').val('');
+
+			q_dialog.setData('bbox');
+			q_dialog.getButton('buscar_btn').enable().stopSpin();
+
 			$('#denuncias').empty();
 			var html_ = '';
 			data.query.forEach(function(denuncia){
