--- a/views/errores/error.jade
+++ b/views/errores/error.jade
@@ -9,3 +9,6 @@ block content
 		pre
 			code !{error.msg}
 	.col-lg-2
+block script
+	script.
+		window.document.title += ' - Error #{error.status}';
