--- a/views/denuncias/visor.jade
+++ b/views/denuncias/visor.jade
@@ -1,11 +1,16 @@
 extends ../base/map_layout
+block link
+	link(rel="stylesheet" href="/javascripts/plugins/bootstrap-tagsinput/dist/bootstrap-tagsinput.css")
 block script
 	script(src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.1/js/bootstrap-datepicker.js")
 	script(src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.1/locales/bootstrap-datepicker.es.min.js")
 	script(src="/javascripts/plugins/OL3-AnimatedCluster/layer/animatedclusterlayer.js")
 	script(src="/javascripts/plugins/OL3-AnimatedCluster/interaction/selectclusterinteraction.js")
-	//script(src="https://cdn.socket.io/socket.io-1.3.7.js")
+	script(src="http://twitter.github.io/typeahead.js/releases/latest/typeahead.jquery.js")
+	script(src="http://twitter.github.io/typeahead.js/releases/latest/bloodhound.js")
+	script(src="/javascripts/plugins/bootstrap-tagsinput/dist/bootstrap-tagsinput.js")
 	script.
+		window.document.title += ' - Visor de denuncias';
 		var dialog_;
 		var denuncias = JSON.parse('!{JSON.stringify(denuncias)}');
 	
