--- a/views/usuarios/editar_loc.jade
+++ b/views/usuarios/editar_loc.jade
@@ -4,7 +4,7 @@ extends ../base/map_layout
 block script
 	script.
 		//alert(typeof(JSON.parse('!{JSON.stringify(loc_pref)}').coordinates));
-		
+		window.document.title += ' - Editar localización - #{user.profile.username}';
 		map.addControl(new app.Draw(false, true));
 		
 		if('!{location_pref}' != ''){
