--- a/views/usuarios/editar_perfil.jade
+++ b/views/usuarios/editar_perfil.jade
@@ -103,6 +103,7 @@ block content
 block script
 	script(src="http://crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/md5.js")
 	script.
+		window.document.title += ' - Editar perfil - #{user_otro.profile.username}';
 		$('.selectpicker').selectpicker({width : '80%'});
 		$('.selectpicker').change(function(event){
 			console.log($('.selectpicker').val());
